<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.MapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal|bottom"
        android:weightSum="3"
        >

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/buttonSatellite"
            android:text="@string/Satellite"
            android:onClick="onSatelliteButtonClick"
            android:layout_weight="1"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/buttonHybrid"
            android:text="@string/Hybrid"
            android:onClick="onHybridButtonClick"
            android:layout_weight="1"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/buttonTerrain"
            android:text="@string/Terrain"
            android:onClick="onTerrainButtonClick"
            android:layout_weight="1"/>

    </LinearLayout>

</FrameLayout>
