<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.takeatrip.Activities.RegistrazioneActivity"
    android:background="@color/blue">

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="10dp"
            android:layout_marginRight="0dp"
            android:layout_marginLeft="0dp"
            android:id="@+id/linearLayout">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/completeProfile"
                android:id="@+id/completeProfile"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="26sp"
                android:paddingBottom="@dimen/activity_vertical_margin"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Username: "
                android:id="@+id/testoNuovoUsername"
                android:textStyle="bold"
                android:layout_below="@+id/Email"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:textColor="#000000"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:ems="10"
                android:id="@+id/InserisciNuovoUsername"
                android:layout_below="@+id/Username"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:textColor="#000000"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/Name"
                android:id="@+id/testoNome"
                android:textStyle="bold"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignRight="@+id/Nome"
                android:layout_alignEnd="@+id/Nome"
                android:textColor="#000000"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:id="@+id/Nome"
                android:layout_below="@+id/testoNome"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:textColor="#000000"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/Surname"
                android:id="@+id/testoCognome"
                android:textStyle="bold"
                android:layout_below="@+id/Nome"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignRight="@+id/Nome"
                android:layout_alignEnd="@+id/Nome"
                android:textColor="#000000"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/Cognome"
                android:layout_below="@+id/testoCognome"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:textColor="#000000"/>



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/DateOfBirth"
                android:id="@+id/testoData"
                android:textStyle="bold"
                android:layout_below="@+id/Password"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:textColor="#000000"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:ems="10"
                android:id="@+id/campoDataNascita"
                android:onClick="onClickChangeDate"
                />


            <!--<LinearLayout-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:orientation="horizontal"-->
                <!--android:id="@+id/linearLayoutDatePickers"-->
                <!--android:layout_gravity="center_horizontal"-->

                <!-->-->

                <!--<NumberPicker-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:id="@+id/pickerYear"-->
                    <!--android:textColor="#000000"-->
                    <!--/>-->

                <!--<NumberPicker-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:id="@+id/pickerMonth"-->
                    <!--android:textColor="#000000"-->
                    <!--/>-->

                <!--<NumberPicker-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:id="@+id/pickerDay"-->
                    <!--android:textColor="#000000"-->
                    <!--/>-->

            <!--</LinearLayout>-->


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/InserisciNuovoSesso"
                android:id="@+id/testoNuovoSesso"
                android:textStyle="bold"
                android:layout_below="@+id/Email"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:textColor="#000000"/>

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:id="@+id/checkBoxMale"
                android:text="@string/Male"
                android:textColor="#000000"/>
            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:ems="10"
                android:id="@+id/checkBoxFemale"
                android:text="@string/Female"
                android:textColor="#000000"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/InserisciNuovaNazionalita"
                android:id="@+id/testoNuovaNazionalita"
                android:textStyle="bold"
                android:layout_below="@+id/Email"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:textColor="#000000"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:ems="10"
                android:id="@+id/InserisciNuovaNazionalita"
                android:layout_below="@+id/Username"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:textColor="#000000"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/InserisciNuovoLavoro"
                android:id="@+id/testoNuovoLavoro"
                android:textStyle="bold"
                android:layout_below="@+id/Email"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:textColor="#000000"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:ems="10"
                android:id="@+id/InserisciNuovoLavoro"
                android:layout_below="@+id/Username"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:textColor="#000000"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/InserisciNuovaDescrizione"
                android:id="@+id/testoNuovaDescrizione"
                android:textStyle="bold"
                android:layout_below="@+id/Email"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:textColor="#000000"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:ems="10"
                android:id="@+id/InserisciNuovaDescrizione"
                android:layout_below="@+id/Username"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:textColor="#000000"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/InserisciNuovoTipo"
                android:id="@+id/testoNuovoTipo"
                android:textStyle="bold"
                android:layout_below="@+id/Email"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:textColor="#000000"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:ems="10"
                android:id="@+id/InserisciNuovoTipo"
                android:layout_below="@+id/Username"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:textColor="#000000"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Register"
                android:id="@+id/Invio"
                android:layout_gravity="center_horizontal"
                android:layout_below="@+id/linearLayout"
                android:layout_centerHorizontal="true"
                android:textColor="#000000"
                android:background="@drawable/button_style"
                />

        </LinearLayout>
    </ScrollView>

</FrameLayout>


