<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/biancoPallido">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/titoloViaggio"
                    android:textSize="30sp"
                    android:text="@string/YourTravel"
                    android:layout_gravity="center"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/editTextNameTravel"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    android:textSize="20sp"
                    android:hint="@string/InsertNameTravel"
                    android:layout_gravity="left"/>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="1"
                    >


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.15"
                        >

                        <AutoCompleteTextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/autoCompleteTextView1"
                            android:paddingTop="@dimen/activity_vertical_margin"
                            android:textSize="20dp"
                            android:hint="@string/Partecipants"
                            android:layout_gravity="left"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0.85">


                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_gravity="center_vertical"
                            android:src="@drawable/pulsante_piu"
                            android:onClick="ClickNewPartecipant"/>


                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:id="@+id/LayoutPartecipantsAdded">


                </LinearLayout>



            </LinearLayout>


        </FrameLayout>

    </ScrollView>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:text="@string/Create"/>


</FrameLayout>
